treeview: Use CSS property "border-top-color" to draw grid lines

This allows themes to customize the grid line colors in treeviews.

https://bugzilla.gnome.org/show_bug.cgi?id=415415